--- a/package.json
+++ b/package.json
@@ -6,7 +6,36 @@
     "express": "^4.21.2",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "@babel/plugin-transform-async-generator-functions": "^7.25.9",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-dynamic-import": "^7.25.9",
+    "@babel/plugin-transform-json-strings": "^7.25.9",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.25.9",
+    "@babel/plugin-transform-numeric-separator": "^7.25.9",
+    "@babel/plugin-transform-object-rest-spread": "^7.25.9",
+    "@babel/plugin-transform-optional-catch-binding": "^7.25.9",
+    "@babel/plugin-transform-optional-chaining": "^7.25.9",
+    "@babel/plugin-transform-unicode-property-regex": "^7.25.9",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.7.9",
+    "cra-template": "1.2.0",
+    "jquery": "^3.7.1",
+    "react": "^19.0.0",
+    "react-bootstrap": "^2.10.7",
+    "react-dom": "^19.0.0",
+    "react-owl-carousel": "^2.3.3",
+    "react-scripts": "^5.0.1",
+    "react-simple-typewriter": "^5.0.1",
+    "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.2",
+    "react-typical": "^0.1.3",
+    "rxjs": "^7.8.1",
+    "slick-carousel": "^1.8.1"
   },
   "name": "myportfolio",
   "version": "1.0.0",
@@ -16,7 +45,7 @@
     "build": "react-scripts build",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run  server\" \"npm run client\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run          build --prefix client"
   },
   "author": "",
