--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "react-scripts build",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run  server\" \"npm run client\"",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run          build --prefix client"
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run          build --prefix client",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "concurrently": "^9.1.2",
@@ -18,7 +19,8 @@
     "express": "^4.21.2",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "react-scripts": "^5.0.1"
   },
   "author": "",
   "license": "ISC",
