--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "react-scripts build --prefix client",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run  server\" \"npm run client\"",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run          build --prefix client",
-    "predeploy": "npm run build"
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "predeploy": "npm run build --prefix client"
   },
   "dependencies": {
     "concurrently": "^9.1.2",
