--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
-    "build": "react-scripts dev --prefix client",
+    "build": "react-scripts build --prefix client",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run  server\" \"npm run client\"",
     "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
-    "predeploy": "npm run dev --prefix client"
+    "predeploy": "npm run build --prefix client"
   },
   "dependencies": {
     "concurrently": "^9.1.2",
